<resources>
    <string name="app_name">SemDAM_1</string>
    <string name="data_curs_valutar">Data curs valutar</string>
    <string name="extrage_date">Afisare Curs Valutar</string>
    <string name="eur">EUR:</string>
    <string name="usd">USD:</string>
    <string name="gbp">GBP:</string>
    <string name="xau">XAU:</string>
    <string name="salvare_curs_valutar">Salvare Curs Valutar</string>
    <string name="introduceti_marca">Introduceti marca!</string>
    <string name="introduceti_data_fabricatiei">Introduceti data fabricatiei!</string>
    <string name="introduceti_pretul">Introduceti pretul!</string>
    <string name="selectati_culoarea">Selectati culoarea:</string>
    <string name="selectati_motorizarea">Selectati motorizarea:</string>
    <string name="hibrid">HIBRID</string>
    <string name="electric">ELECTRIC</string>
    <string name="diesel">DIESEL</string>
    <string name="benzina">BENZINA</string>
</resources>