<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/editTextMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/introduceti_marca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/introduceti_data_fabricatiei"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMarca"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextPret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/introduceti_pretul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/selectati_culoarea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPret" />

    <Spinner
        android:id="@+id/spinnerCulori"
        android:layout_width="393dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="352dp"
        android:layout_height="74dp"
        android:layout_marginStart="28dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioBenzina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benzina" />

        <RadioButton
            android:id="@+id/radioDisel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diesel" />

        <RadioButton
            android:id="@+id/radioElectric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electric" />

        <RadioButton
            android:id="@+id/radioHibrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hibrid" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectati_motorizarea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCulori" />

    <Button
        android:id="@+id/btnAdauga"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="Adauga Masina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />
</androidx.constraintlayout.widget.ConstraintLayout>